  EntityApplicationPanel bug fixed, MESSAGES no longer static so that default locale can be set in a main method of a subclass
  DefaultEntityConnectionServer, serialization whitelist implemented with dry run option
  AbstractServer, shared login proxies added
  AbstractServer bug fixed, did not disconnect clients on shutdown before closing login proxies, which would then not be notified of the disconnection
  DefaultEntityConnectionServer no longer disconnects clients in handleShutdown(), see above
  DefaultEntityConnectionServer, serialization whitelist no longer crashes Java versions > 8, only enabled on Java 8
  DefaultProperty.BooleanValueConverter default constructor now throws exception if database type is not specified
  EntityBeanMapperTest, added boolean property
  UiUtil.prepareScrollPanelDialog() regression bug fixed, now selection is triggered on Enter keyPressed
  UiUtil, generics added to a few methods
  EntityPanelProvider no longer implements Comparable
  EntityApplicationPanel now does the (correct) sorting of support panel providers
  JavaFX module unit tests improved, now use testfx library to initialize the JavaFX environment instead of the new JFXPanel() hack
  Automatic-Module-Name fixed after gradle module renaming
  Minor changes to RemoteClient.clientHost attribute handling
  H2Database, unit test multiple in-memory databases
  EntityService, some refactoring
  Jetty upgraded
  Serialization whitelist updated
  Chinook demo domain split into api and impl
  jaxb-api and javax-activation dependencies added to modules using Jetty and openjfx to FX module so project builds and runs with Java 11 as well as 8
0.11.5
  build.gradle refactored and improved (openjfx removed from FX module, wouldn't build with java 8, well duh)
  Jetty, tomcat pool and junit upgraded
  AbstractTableSortModel.sort() refactored, performance improved quite a bit, no longer calls getSortingStatesOrderedByPriority() on each compare