@@ -4902,3 +4902,4 @@
   build.gradle refactored and improved (openjfx removed from FX module, wouldn't build with java 8, well duh)
   Jetty, tomcat pool and junit upgraded
   AbstractTableSortModel.sort() refactored, performance improved quite a bit, no longer calls getSortingStatesOrderedByPriority() on each compare
+  EntityModel, add/removeLinkedDetailModelsListener() replaced with add/removeLinkedDetailModelAddedListener() and add/removeLinkedDetailModelRemovedListener()
